--- a/application/admin/view/post/create.html
+++ b/application/admin/view/post/create.html
@@ -55,7 +55,7 @@
                     <div class="col-sm-11">
                         <div class="col-sm-6" title="图片上传">
                             <div style="margin-bottom: 5px">
-                                <span class="body_img_upload"><i class="ti-export"></i></span>
+                                <span class="body_img_upload"><i class="ti-image"></i></span>
                             </div>
                             <textarea class="col-md-12" name="body"
                                       placeholder="markdown语法">{$post['body']|default=''}</textarea>
