--- a/application/admin/view/classify/all.html
+++ b/application/admin/view/classify/all.html
@@ -4,18 +4,24 @@
         <table class="table table-responsive table-striped table-hover">
             <thead>
             <tr>
-                <th>id</th>
                 <th>名称</th>
-                <th>排序</th>
+                <th width="500">介绍</th>
+                <th>技术路径</th>
+                <th width="50">排序</th>
                 <th>操作</th>
             </tr>
             </thead>
             <tbody>
             {volist name='classify_list' id='classify'}
             <tr>
-                <th>{$classify.id}</th>
                 <td>{$classify.name}</td>
+                <td>{$classify.introduce}</td>
+                <td><span class="label label-primary">{$classify.url}</span>
+                    {if $classify.url}
+                    丨<a href="{$classify.url}" target="_blank" class="btn btn-default btn-xs">访问</a></td>
+                    {/if}
                 <td>{$classify.sort}</td>
+
                 <td>
                     <div class="btn-group">
                         <a class="btn btn-success" href="/admin/classify/create/{$classify.id}">修改</a>
