--- a/application/admin/view/classify/create.html
+++ b/application/admin/view/classify/create.html
@@ -8,9 +8,25 @@
             <div class="form-group">
                 <label class="col-sm-1 control-label">分类名称</label>
                 <div class="col-sm-11">
-                    <input type="text" class="form-control" value="{$classify['name']|default=''}" name="name" placeholder="请输入名称，15个字以内">
+                    <input type="text" class="form-control" value="{$classify['name']|default=''}" name="name"
+                           placeholder="请输入名称，15个字以内">
                 </div>
             </div>
+
+            <div class="form-group">
+                <label class="col-sm-1 control-label">介绍</label>
+                <div class="col-sm-11">
+                    <textarea type="text" class="form-control" rows="4" name="introduce">{$classify['introduce']|default=''}</textarea>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-1 control-label">技术路径</label>
+                <div class="col-sm-11">
+                    <input type="text" value="{$classify['url']|default=''}" placeholder="网络路径" class="form-control" name="url">
+                </div>
+            </div>
+
             <div class="form-group">
                 <label class="col-sm-1 control-label">排序</label>
                 <div class="col-sm-3">
@@ -41,7 +57,26 @@
                             message: '最多设置100个字符'
                         },
                     }
-                }
+                },
+                introduce:{
+                    validators: {
+                        notEmpty: {
+                            message: '介绍不能为空'
+                        }
+                    }
+                },
+                url:{
+                    validators: {
+                        notEmpty: {
+                            message: 'url不能为空'
+                        },
+                        uri:{
+                            message:"url不正确，请输入正确的url，必须以'http://'或者'https://打头'"
+                        }
+                    },
+
+                },
+
             }
         });
     });
