--- a/application/index/view/base.html
+++ b/application/index/view/base.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>追风的牧羊人个人博客</title>
+    <meta name="author" content="追风的牧羊人3245096941@qq.com">
+    <meta name="keywords" content="HTML,CSS,JavaScript,php,tp5,thinkphp5">
+    <title>{$current_post.title|default='追风的牧羊人个人博客'}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
     <link rel="stylesheet"
           href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
