--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -1,15 +1,17 @@
 {layout name='base'}
-<div class="container" style="margin-top: 10px">
+<div class="container">
     <div class="row">
         <div class="col-md-10">
             <div class="row">
                 {volist name='post_list' id='post'}
-                <div class="col-md-4" style="margin-top: 3px">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-md-4">
+                    <div class="card" style="width: 19rem;">
                         <img class="card-img-top" src="{$post.placeholder}">
                         <div class="card-body">
                             <h5 class="card-title">{$post.title}</h5>
-                            <p><small>{$post.create_time}</small></p>
+                            <p>
+                                <small>{$post.create_time}</small>
+                            </p>
                             <p class="card-text">{$post.intro}</p>
                             <a href="/particulars/{$post.id}" class="btn btn-primary">查看详情</a>
                         </div>
@@ -24,8 +26,8 @@
                         <a class="page-link" href="/page/{$current_page-1}"><span>&laquo;</span></a>
                     </li>
                     {for start="1" end="$count+1" name='num'}
-                    <li class="page-item {$current_page==$num?'active':''}"><a class="page-link"
-                                                                               href="/page/{$num}">{$num}</a></li>
+                    <li class="page-item {$current_page==$num?'active':''}"><a class="page-link" href="/page/{$num}">{$num}</a>
+                    </li>
                     {/for}
                     <li class="page-item {$current_page==$count?'disabled':''}">
                         <a class="page-link" href="/page/{$current_page+1}"><span>&raquo;</span></a>
@@ -34,26 +36,22 @@
             </nav>
         </div>
 
+        <!--分类归类-->
         <div class="col-md-2">
-            <div class="card">
-                <div class="card-body">
-                    {volist name='classify_list' id='classify'}
-                    <span class="badge badge-primary" style="display: block;margin-top: 2px;font-size: 20px">{$classify.name}</span>
-                    {/volist}
-                </div>
+            <div class="btn-group-vertical btn-block">
+                {volist name='classify_list' id='classify'}
+                {switch $type = rand(1,6)}
+                    {case value='1'}<button type="button" class="btn btn-raised btn-primary">{$classify.name}</button>{/case}
+                    {case value='2'}<button type="button" class="btn btn-raised btn-secondary">{$classify.name}</button>{/case}
+                    {case value='3'}<button type="button" class="btn btn-raised btn-success">{$classify.name}</button>{/case}
+                    {case value='4'}<button type="button" class="btn btn-raised btn-info">{$classify.name}</button>{/case}
+                    {case value='5'}<button type="button" class="btn btn-raised btn-warning">{$classify.name}</button>{/case}
+                    {case value='6'}<button type="button" class="btn btn-raised btn-danger">{$classify.name}</button>{/case}
+                {/switch}
+                {/volist}
             </div>
         </div>
     </div>
+
+
 </div>
-
-
-<style>
-    .title {
-        cursor: pointer;
-        position: relative;
-    }
-
-    .title :hover {
-        color: #eee;
-    }
-</style>
