--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -53,8 +53,8 @@
                     </ul>
                 </li>
                 <!--图片管理-->
-                <li class="{$nav['main']|default=''}">
-                    <a href="/admin"><i class="ti-image"></i> 图片管理 </a>
+                <li class="{$nav['comment']|default=''}">
+                    <a href="/admin/comment/all"><i class="ti-comments"></i> 评论管理 </a>
                 </li>
             </ul>
         </div>
