--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -52,7 +52,7 @@
                         <li><a href="/admin/classify/create">创建分类</a></li>
                     </ul>
                 </li>
-                <!--图片管理-->
+                <!--评论管理-->
                 <li class="{$nav['comment']|default=''}">
                     <a href="/admin/comment/all"><i class="ti-comments"></i> 评论管理 </a>
                 </li>
