--- a/application/index/view/index/particulars.html
+++ b/application/index/view/index/particulars.html
@@ -74,7 +74,8 @@
                                 post_id: "{$current_post.id}"
                             },
                             success(res) {
-                                let comment = JSON.parse(res).data;
+                                console.log(res);
+                                let comment = res.data;
                                 $(".comment_list").append(`
                                    <a href="#" class="list-group-item list-group-item-action  flex-column align-items-start">
                                         <div class="d-flex w-100 justify-content-between">
