--- a/application/index/view/base.html
+++ b/application/index/view/base.html
@@ -38,6 +38,14 @@
     </div>
 </nav>
 {__CONTENT__}
+
+<footer class="blog-footer">
+    <p class="text-center">本博客模板主要使用<a href="https://fezvrasta.github.io/bootstrap-material-design/">Material Design for Bootstrap</a></p>
+    <p class="text-center">
+        <a href="#">返回顶部</a>
+    </p>
+</footer>
+
 <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"
         integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U"
         crossorigin="anonymous"></script>
