--- a/application/index/view/index/particulars.html
+++ b/application/index/view/index/particulars.html
@@ -25,8 +25,10 @@
                 <script>
                     let con = new showdown.Converter({tables: true});
                     $(".body").html(con.makeHtml($("textarea").text()));
-
                     $(".body table").addClass('table table-hover');
+                    $(".body img").css({
+                        "width":"100%"
+                    })
                 </script>
             </div>
             <hr>
